--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,12 +1,37 @@
 modLoader="javafml"
 loaderVersion="[36,)"
-license="All rights reserved"
+license="MIT"
+issueTrackerURL="https://github.com/willatendo/Roses-Forge/issues"
 
 [[mods]]
 modId="roses"
 version="2.0.0"
 displayName="Roses"
+updateJSONURL="https://github.com/willatendo/Roses-Forge/raw/main/updates.json"
+displayURL="https://www.curseforge.com/minecraft/mc-mods/roses-forge"
+logoFile="roses.png"
 authors="Willatendo"
 description='''
 Brings the past back!
 '''
+
+[[dependencies.lostworlds]]
+    modId="forge"
+    mandatory=true
+    versionRange="[36,)"
+    ordering="NONE"
+    side="BOTH"
+
+[[dependencies.lostworlds]]
+    modId="minecraft"
+    mandatory=true
+    versionRange="[1.16.5,1.17)"
+    ordering="NONE"
+    side="BOTH"
+    
+[[dependencies.lostworlds]]
+    modId="tyrannotitanlib"
+    mandatory=true
+    versionRange="[v1.2.3,)"
+    ordering="NONE"
+    side="BOTH"
