--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ issueTrackerURL="https://github.com/willatendo/Roses-Forge/issues"
 
 [[mods]]
 modId="roses"
-version="2.0.0"
+version="2.0.1"
 displayName="Roses"
 updateJSONURL="https://github.com/willatendo/Roses-Forge/raw/main/updates.json"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/roses-forge"
@@ -15,21 +15,21 @@ description='''
 Brings the past back!
 '''
 
-[[dependencies.lostworlds]]
+[[dependencies.roses]]
     modId="forge"
     mandatory=true
     versionRange="[36,)"
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.lostworlds]]
+[[dependencies.roses]]
     modId="minecraft"
     mandatory=true
     versionRange="[1.16.5,1.17)"
     ordering="NONE"
     side="BOTH"
     
-[[dependencies.lostworlds]]
+[[dependencies.roses]]
     modId="tyrannotitanlib"
     mandatory=true
     versionRange="[v1.2.3,)"
