--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,34 @@
 buildscript {
     repositories {
-        maven { url = 'https://files.minecraftforge.net/maven' }
+        maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
+	
 }
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+apply plugin: 'org.spongepowered.mixin'
 
-version = '2.0.1'
+version = '3.0.0'
 group = 'roses'
 archivesBaseName = 'roses'
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(8)
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
-    mappings channel: 'official', version: '1.16.5'
+    mappings channel: 'official', version: '1.18.1'
 	
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     
     runs {
         client {
             workingDirectory project.file('run')
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
 
             mods {
                 roses {
@@ -35,6 +37,12 @@ minecraft {
             }
         }
     }
+}
+
+mixin {
+	add sourceSets.main, "terrablender.refmap.json"
+
+    config "terrablender.mixins.json"
 }
 
 repositories {
@@ -47,9 +55,12 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.2.8'
+    minecraft 'net.minecraftforge:forge:1.18.1-39.0.59'
     
-    implementation fg.deobf("curse.maven:tyrannotitan-library-forge-425570:3487375")
+ 	implementation fg.deobf("com.github.glitchfiend:TerraBlender-forge:1.18.1-1.1.0.70")
+    implementation fg.deobf("curse.maven:tyrannotitan-library-forge-425570:3621671")
+	
+	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
 
 jar {
