--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,24 @@
-buildscript {
-	repositories {
-		maven { url = 'https://maven.minecraftforge.net' }
-		mavenCentral()
-	}
-	dependencies {
-		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-	}
-}
-
 plugins {
     id 'eclipse'
     id 'maven-publish'
+    id 'net.minecraftforge.gradle' version '5.1.+'
 	id 'com.github.johnrengelman.shadow' version '7.1.0'
 }
-apply plugin: 'net.minecraftforge.gradle'
+
+apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'
 
 configurations {
 	shade
 }
 
-version = '3.3.0'
+version = '4.0.0'
 group = 'roses'
 archivesBaseName = 'roses'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
-	mappings channel: 'official', version: '1.18.2'
+	mappings channel: 'official', version: '1.19'
 	
 	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 	
@@ -78,11 +70,9 @@ repositories {
 }
 
 dependencies {
-	minecraft 'net.minecraftforge:forge:1.18.2-40.0.25'
+	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 	
-	implementation fg.deobf("curse.maven:tyrannotitan-library-forge-425570:3711889")
-	
-	def registrate = "com.tterrag.registrate:Registrate:MC1.18.2-1.0.24"
+	def registrate = "com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"
 	implementation fg.deobf(registrate)
 	shade registrate
 }
@@ -92,7 +82,7 @@ jar {
 		attributes([
 			"Specification-Title": "roses",
 			"Specification-Vendor": "Willatendo",
-			"Specification-Version": "3.3.0",
+			"Specification-Version": "4.0.0",
 			"Implementation-Title": project.name,
 			"Implementation-Version": "${version}",
 			"Implementation-Vendor" :"Willatendo",
