--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,13 @@
 org.gradle.jvmargs=-Xmx8G
 org.gradle.daemon=false
+
+# Base Info
+minecraft_version=1.19
+forge_version=41.0.63
+
+# Build Dependencies Info
+forgegradle_version=5.1+
+shadow_version=7.1.0
+
+# Dependencies Info
+registrate_version=1.1.3
