--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,14 @@ configurations {
 	shade
 }
 
-version = '4.0.0'
+version = '4.1.0'
 group = 'roses'
 archivesBaseName = 'roses'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 minecraft {
-	mappings channel: 'official', version: '1.19'
+	mappings channel: 'official', version: minecraft_version
 	
 	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 	
@@ -50,12 +50,6 @@ minecraft {
 sourceSets.main.resources {
     srcDir 'src/generated/resources'
 }
-
-shadowJar {
-	classifier = ''
-	configurations = [project.configurations.shade]
-	relocate 'com.tterrag.registrate', 'roses.repack.registrate'
-}
 	
 repositories {
 	maven {
@@ -72,7 +66,7 @@ repositories {
 dependencies {
 	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 	
-	def registrate = "com.tterrag.registrate:Registrate:MC${minecraft_version}-${registrate_version}"
+	def registrate = "com.tterrag.registrate:Registrate:MC${major_version}-${registrate_version}"
 	implementation fg.deobf(registrate)
 	shade registrate
 }
@@ -82,13 +76,19 @@ jar {
 		attributes([
 			"Specification-Title": "roses",
 			"Specification-Vendor": "Willatendo",
-			"Specification-Version": "4.0.0",
+			"Specification-Version": "4.1.0",
 			"Implementation-Title": project.name,
 			"Implementation-Version": "${version}",
 			"Implementation-Vendor" :"Willatendo",
 			"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
 		])
 	}
+}
+
+shadowJar {
+	classifier = ''
+	configurations = [project.configurations.shade]
+	relocate 'com.tterrag.registrate', 'roses.repack.registrate'
 }
 
 reobf {
