--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,13 @@ org.gradle.jvmargs=-Xmx8G
 org.gradle.daemon=false
 
 # Base Info
-minecraft_version=1.19
-forge_version=41.1.0
+minecraft_version=1.19.2
+major_version=1.19
+forge_version=43.1.32
 
 # Build Dependencies Info
 forgegradle_version=5.1+
 shadow_version=7.1.0
 
 # Dependencies Info
-registrate_version=1.1.4
+registrate_version=1.1.5
