--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ version="5.0.0"
 displayName="Roses"
 updateJSONURL="https://github.com/willatendo/Roses-Forge/raw/main/updates.json"
 displayURL="https://github.com/willatendo/Roses"
-# logoFile="roses_logo.png"
+logoFile="roses_icon.png"
 authors="Willatendo"
 description='''
 Brings the past back!
